# sheath-model

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: algorithm.md
examples/: plot_profiles.py
sheath_model/: __init__.py  solver.py
src/zhao_sheath/: __main__.py  solver.py
tests/: __init__.py  test_solver.py
