[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheath-model"
version = "0.1.0"
description = "Python solver for the Zhao et al. lunar photoelectron sheath model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]
authors = [
  {name = "Jin Nakazono"}
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
